--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HelpmoneyApp</title>
+  <title>helpmoney</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
 </head>
-<body>
-  <hm-root></hm-root>
+<body class="hold-transition skin-blue sidebar-collapse sidebar-mini">
+    <hm-root></hm-root>
 </body>
 </html>
